Fix formatting of contributors page on Safari (#1865)
* Remove text-align-last

* Justify contributors description section

--- a/src/styles/_contributors.scss
+++ b/src/styles/_contributors.scss
@@ -42,10 +42,13 @@
     }
 
     p {
-      text-align: justify;
-      text-align-last: center;
       margin-right: 0.5%;
       margin-left: 0.5%;
+    }
+
+    p.description {
+      text-align: justify;
+      text-align-last: center;
     }
 
     span.dot {
